# GreatScanner

./: .gitignore  CMakeLists.txt  Def.h  ExcelReconstructor.h  LayoutReconstructor.h  README.md  TestWindow.h  _singleton.h  assets.qrc  autocomplete.cpp  autocomplete.h  autocomplete.ui  autocompleteitem.cpp  autocompleteitem.h  autocompleteitem.ui  cardgroup.cpp  cardgroup.h  cardview.cpp  cardview.h  clickablelabel.cpp  clickablelabel.h  colorblock.cpp  colorblock.h  config.ini  controlwidget.cpp  controlwidget.h  controlwidget.ui  customgraphicsview.cpp  customgraphicsview.h  customtoolbutton.cpp  customtoolbutton.h  cvutils.cpp  cvutils.h  diffusion_button.cpp  diffusion_button.h  fileuploader.cpp  fileuploader.h  fileuploadqueue.cpp  fileuploadqueue.h  flowlayout.cpp  (+101 more)
GreatScanner/: CMakeLists.txt  CvUtils.h  assets.qrc  config.ini  customgraphicsview.cpp  customgraphicsview.h  customtoolbutton.cpp  customtoolbutton.h  frame.cpp  frame.h  global.cpp  global.h  imgeditor.cpp  imgeditor.h  imgeditor.ui  infinitedial.cpp  infinitedial.h  main.cpp  movepointcommand.cpp  movepointcommand.h  pointitem.cpp  pointitem.h  rotateimgcommand.h  singleton.h  undo_stack_singleton.cpp  undo_stack_singleton.h
configs/: ShortCut.json
ipc/include/: IShmChannelNotify.h
ipc/src/: ShmIPCClient.cpp  ShmIPCDefine.h  ShmIPCServer.cpp
ipc/src/handler/: ShmIPCWriter.cpp
ipc/src/sharemem/: SharedMemory.cpp
search/: JiebaSingleton.h  SearchDef.h  searchengine.h
sql/sqlite/: basedao.h  file_info.sql  historydao.cpp  historydao.h  sqlitemgr.cpp  sqlitemgr.h
